--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.23.0",
     "react": "^16.13.1",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.9.2",
     "react-router-dom": "^5.2.0",
